# cxxtimer

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: cxxtimerConfig.cmake.in
example/: CMakeLists.txt  example.cpp
include/cxxtimer/: Profiler.hpp  Timer.hpp  cxxtimer.hpp  profiler.hpp
src/: CMakeLists.txt  Profiler.cpp  Timer.cpp  cxxtimer.cpp  cxxtimer.hpp  profiler.cpp
test/: CMakeLists.txt  count_before_stop.cpp  profiler.cpp  simple.cpp
